Updated Version with new API Gemini with Upload Image auto filling form chat

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <div class="form-container" id="formContainer">
       <h2 id="formTitle">Report an Issue</h2>
       <form id="reportForm">
+        <input type="file" id="imageUpload" accept="image/*">
         <textarea id="issueDescription" placeholder="Describe the issue..." required></textarea>
         <button type="submit">Submit</button>
       </form>
