--- a/upload.html
+++ b/upload.html
@@ -12,6 +12,17 @@
     
     <h2 style="color: #006747; margin-bottom: 10px;">Upload a Photo</h2>
 
+    <div style="display: flex; gap: 10px; width: 100%;">
+      <div style="display: flex; flex-direction: row; align-items: flex-start; gap: 10px; width: 50%;">
+        <label for="building">Building:</label>
+        <input type="text" id="building" placeholder="Example: LIB, MSC..."/>
+      </div>
+      <div style="display: flex; flex-direction: row; align-items: flex-end; justify-content: flex-end; gap: 10px; width: 50%;">
+        <label for="specificLocation">Floor/Room:</label>
+        <input type="text" id="specificLocation" placeholder="Optional"/>
+      </div>
+    </div>
+
     <input type="file" id="inputImage" accept="image/*" 
       style="width: 100%; padding: 10px; border: 1px solid #ccc; border-radius: 6px;"/>
 
