--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                   <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href=""> About</a>
+                  <a class="nav-link" href="admin.html"> Admin</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="">Services</a>
