finished sending mails

--- a/upload.html
+++ b/upload.html
@@ -4,8 +4,33 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="chatbot.py">
   <title>Upload Image</title>
+  <style>
+    body {
+      background-image: url('assets/campus.png');
+      background-size: cover;           /* scales image to fill screen */
+      background-repeat: no-repeat;     /* prevents tiling */
+      background-position: center;      /* centers the image */
+      background-attachment: fixed;     /* optional: keeps image in place while scrolling */
+    }
+    body::before{
+      content: "";
+      position: fixed; /* Cover the entire viewport */
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(128, 128, 128, 0.6); /* Gray with 50% opacity */
+      z-index: 1; /* Place the mask above the background image */
+    }
+    body > * {
+      position: relative; /* Create a stacking context for children */
+      z-index: 2; /* Place main content above the mask */
+    }
+  </style>
 </head>
+
 <body style="display: flex; justify-content: center; align-items: center; min-height: 100vh; margin: 0; background-color: #f8f8f8; font-family: 'Segoe UI', sans-serif;">
 
   <form style="display: flex; flex-direction: column; gap: 15px; width: 90%; max-width: 600px; padding: 30px; background-color: #ffffff; border: 2px solid #006747; border-radius: 12px; box-shadow: 0 8px 20px rgba(0,0,0,0.1); align-items: center;">
@@ -15,7 +40,7 @@
     <div style="display: flex; gap: 10px; width: 100%;">
       <div style="display: flex; flex-direction: row; align-items: flex-start; gap: 10px; width: 50%;">
         <label for="building">Building:</label>
-        <input type="text" id="building" placeholder="Example: LIB, MSC..."/>
+        <input type="text" id="building" placeholder="Example: LIB, MSC..." required/>
       </div>
       <div style="display: flex; flex-direction: row; align-items: flex-end; justify-content: flex-end; gap: 10px; width: 50%;">
         <label for="specificLocation">Floor/Room:</label>
@@ -35,21 +60,23 @@
       <label for="checkbox" style="font-size: 14px;">Is this the image you want to submit?</label>
     </div>
 
-    <input type="submit" id="submitBtn" value="Submit"
+    <button type="submit" id="submitBtn"
       style="width: 100%; padding: 12px; font-weight: bold; font-size: 16px; border: 2px solid #006747; border-radius: 6px; 
       cursor: pointer; transition: all 0.3s ease;" 
       onmouseover="this.style.backgroundColor='white'; this.style.color='#006747';"
       onmouseout="this.style.backgroundColor='#006747'; this.style.color='white';"
-      disabled />
+      disabled>
+      Submit
+    </button>
   </form>
 
   <script>
-    const inputImage = document.getElementById("inputImage");
+    const inputImg = document.getElementById("inputImage");
     const displayedImage = document.getElementById("displayedImage");
     const checkbox = document.getElementById("checkbox");
     const submitBtn = document.getElementById("submitBtn");
 
-    inputImage.addEventListener("change", function () {
+    inputImg.addEventListener("change", function() {
       const file = this.files[0];
       if (file) {
         const reader = new FileReader();
@@ -71,6 +98,49 @@
     checkbox.addEventListener("change", function () {
       submitBtn.disabled = !this.checked;
     });
+
+    const form = document.querySelector("form");
+    const imageFile = inputImg.files[0];
+    const building = document.getElementById("building").value;
+    const room = document.getElementById("specificLocation").value;
+
+    form.addEventListener("submit", async (e) => {
+      e.preventDefault(); // Prevent form from actually submitting
+
+      // Get the latest values of the inputs when the submit button is clicked
+      const imageFile = inputImg.files[0];  // Get the image after user selects it
+      const building = document.getElementById("building").value;
+      const room = document.getElementById("specificLocation").value;
+
+      if (!imageFile) {
+        alert('Please select an image!');
+        return;
+      }
+
+      const formData = new FormData();
+      formData.append('image', imageFile);
+      formData.append('building', building);
+      formData.append('room', room);
+
+      try {
+        const emailResponse = await fetch('http://127.0.0.1:5000/email-with-ai', {
+          method: 'POST',
+          body: formData
+        });
+
+        if (!emailResponse.ok) {
+          const errorText = await emailResponse.text();
+          throw new Error(`Server returned an error: ${errorText}`);
+        }
+
+        const result = await emailResponse.text();
+        alert(result);
+      } catch (error) {
+        console.error('Email failed:', error);
+        alert(error);
+      }
+    });
+    
   </script>
 </body>
 </html>
