--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
           </a>
       
           <!-- Email -->
-          <a href="mailto:customerservice@campuxfix.com" style="color: white; text-decoration: none; display: flex; align-items: center; gap: 6px;">
+          <a href="mailto:campusfixusf@gmail.com" style="color: white; text-decoration: none; display: flex; align-items: center; gap: 6px;">
             <i class="fa fa-envelope" aria-hidden="true" style="color: #fdbb30;"></i>
-            <span style="font-size: 14px;">Email: customerservice@campuxfix.com</span>
+            <span style="font-size: 14px;">Email: campusfixusf@gmail.com</span>
           </a>
       
         </div>
