--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
                   <a class="nav-link" href="admin.html"> Admin</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="">Services</a>
+                  <a class="nav-link" href="services.html">Services</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="">Contact Us</a>
+                  <a class="nav-link" href="contact.html">Contact Us</a>
                 </li>
               </ul>
             </div>
