final commit please

--- a/upload.html
+++ b/upload.html
@@ -8,7 +8,7 @@
   <title>Upload Image</title>
   <style>
     body {
-      background-image: url('assets/campus.png');
+      background-image: url('background.jpg');
       background-size: cover;           /* scales image to fill screen */
       background-repeat: no-repeat;     /* prevents tiling */
       background-position: center;      /* centers the image */
